changed to esbjerg

--- a/R/freq_trans/LSP_histogram_parrallel.Rmd
+++ b/R/freq_trans/LSP_histogram_parrallel.Rmd
@@ -52,7 +52,7 @@ source(here("R", "functions", "rclr_transform.R"))
 # --- 1. Load Data ---
 # Load the ampvis2 object directly from the .rds file
 amp_object_raw <- readRDS(here("data", "d_initial_Simon_subset.rds")) %>%
-  amp_filter_samples(SampleSite == "Aalborg W")
+  amp_filter_samples(SampleSite == "Esbjerg W")
 ```
 
 # Analysis of Significant ASV Periodicities by Site
